make data be populated initially

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,74 @@
+# -------------------------------------------------
+# Application
+# SPRING_PROFILES_ACTIVE should be configured beforehand on hosted machine.
+# -------------------------------------------------
 spring.application.name=conjunction_assessment_service
+#spring.profiles.active=dev
 
+# -------------------------------------------------
 # Assessment Executor
+# New threads are created up to the corePoolSize
+# If the queue is full, more threads are created up to maxPoolSize
+# The queue is used before scaling beyond corePoolSize
+#       A large queue reduces thread creation
+#       A small queue encourages parallelism
+# Example:
+# First 5 tasks -> executed immediately (5 threads)
+# Next 100 tasks -> placed in the queue
+# Next 5 tasks -> cause new threads to be created (up to 10)
+# Further tasks -> rejected
+# -------------------------------------------------
 assessment.executor.corePoolSize=5
 assessment.executor.maxPoolSize=10
 assessment.executor.queueCapacity=100
 assessment.executor.threadNamePrefix="assessmentExecutor-"
+
+# -------------------------------------------------
+# Datasource (PostgreSQL) Postgresql 16
+# -------------------------------------------------
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/space_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# -------------------------------------------------
+# HikariCP (Production tuning)
+# -------------------------------------------------
+spring.datasource.hikari.pool-name=space-hikari
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.validation-timeout=5000
+
+# -------------------------------------------------
+# JPA / Hibernate
+# -------------------------------------------------
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# -------------------------------------------------
+# SQL Initialization
+# -------------------------------------------------
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+
+# -------------------------------------------------
+# Logging
+# -------------------------------------------------
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql=WARN
+
+# -------------------------------------------------
+# Actuator
+# -------------------------------------------------
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when_authorized
