implement routine screening scheduler

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,24 +6,6 @@ spring.application.name=conjunction_assessment_service
 #spring.profiles.active=dev
 
 # -------------------------------------------------
-# Assessment Executor
-# New threads are created up to the corePoolSize
-# If the queue is full, more threads are created up to maxPoolSize
-# The queue is used before scaling beyond corePoolSize
-#       A large queue reduces thread creation
-#       A small queue encourages parallelism
-# Example:
-# First 5 tasks -> executed immediately (5 threads)
-# Next 100 tasks -> placed in the queue
-# Next 5 tasks -> cause new threads to be created (up to 10)
-# Further tasks -> rejected
-# -------------------------------------------------
-assessment.executor.corePoolSize=5
-assessment.executor.maxPoolSize=10
-assessment.executor.queueCapacity=100
-assessment.executor.threadNamePrefix="assessmentExecutor-"
-
-# -------------------------------------------------
 # Datasource (PostgreSQL) Postgresql 16
 # -------------------------------------------------
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/space_db}
@@ -70,5 +52,29 @@ logging.level.org.hibernate.type.descriptor.sql=WARN
 # -------------------------------------------------
 # Actuator
 # -------------------------------------------------
-management.endpoints.web.exposure.include=health,info,metrics
-management.endpoint.health.show-details=when_authorized
+#management.endpoints.web.exposure.include=health,info,metrics
+#management.endpoint.health.show-details=when_authorized
+
+# -------------------------------------------------
+# Assessment Executor
+# New threads are created up to the corePoolSize
+# If the queue is full, more threads are created up to maxPoolSize
+# The queue is used before scaling beyond corePoolSize
+#       A large queue reduces thread creation
+#       A small queue encourages parallelism
+# Example:
+# First 5 tasks -> executed immediately (5 threads)
+# Next 100 tasks -> placed in the queue
+# Next 5 tasks -> cause new threads to be created (up to 10)
+# Further tasks -> rejected
+# -------------------------------------------------
+assessment.executor.corePoolSize=5
+assessment.executor.maxPoolSize=10
+assessment.executor.queueCapacity=100
+assessment.executor.threadNamePrefix="assessmentExecutor-"
+
+# -------------------------------------------------
+# Routine Screening
+# How often the screening calculate
+# -------------------------------------------------
+screening.scheduler.timeStepInMinute=10
