--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,19 +27,22 @@ spring.datasource.hikari.validation-timeout=5000
 # -------------------------------------------------
 # JPA / Hibernate
 # -------------------------------------------------
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+# IMPORTANT: let JPA create tables before data.sql runs
+spring.jpa.defer-datasource-initialization=true
 
 # -------------------------------------------------
 # SQL Initialization
 # -------------------------------------------------
 spring.sql.init.mode=always
 spring.sql.init.platform=postgres
+spring.sql.init.data-locations=classpath:data-4samples.sql
 
 # -------------------------------------------------
 # Logging
@@ -77,4 +80,5 @@ assessment.executor.threadNamePrefix="assessmentExecutor-"
 # Routine Screening
 # How often the screening calculate
 # -------------------------------------------------
-screening.scheduler.timeStepInMinute=10
+screening.scheduler.timeStepInMinute=144
+screening.scheduler.mode=synchronous
