--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -82,3 +82,27 @@ assessment.executor.threadNamePrefix="assessmentExecutor-"
 # -------------------------------------------------
 screening.scheduler.timeStepInMinute=144
 screening.scheduler.mode=synchronous
+
+# -------------------------------------------------
+# RabbitMQ Configuration
+# -------------------------------------------------
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:rabbitmq}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:rabbitmq}
+spring.rabbitmq.virtual-host=${RABBITMQ_VHOST:/}
+
+# RabbitMQ Listener Configuration
+spring.rabbitmq.listener.simple.acknowledge-mode=auto
+spring.rabbitmq.listener.simple.prefetch=1
+spring.rabbitmq.listener.simple.concurrency=1
+spring.rabbitmq.listener.simple.max-concurrency=5
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=3000
+spring.rabbitmq.listener.simple.retry.multiplier=2.0
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+
+# RabbitMQ Template Configuration
+spring.rabbitmq.template.retry.enabled=true
+spring.rabbitmq.template.retry.initial-interval=1000
+spring.rabbitmq.template.retry.multiplier=2.0
