add LLM properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -106,3 +106,9 @@ spring.rabbitmq.listener.simple.default-requeue-rejected=false
 spring.rabbitmq.template.retry.enabled=true
 spring.rabbitmq.template.retry.initial-interval=1000
 spring.rabbitmq.template.retry.multiplier=2.0
+
+# -------------------------------------------------
+# RAG Configuration with Anthropic Integration
+# -------------------------------------------------
+langchain4j.anthropic.chat-model.api-key=${CLAUDE_API_KEY}
+langchain4j.anthropic.chat-model.model-name=claude-sonnet-4-5
